ecmascript/parser/tests/test262-error-references/fail/e8a08a6fe21d46a8.js.stderr
error: Unexpected token Some(Dot)
 --> $DIR/tests/test262-parser/fail/e8a08a6fe21d46a8.js:1:10
  |
1 | ({ set s(.) { } })
  |          ^

